--- a/about.html
+++ b/about.html
@@ -165,7 +165,7 @@
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="img-circle" src="image/hand.jpg" alt="Generic placeholder image" width="140" height="140">
-          <h2>Get Involve</h2>
+          <h2>Get Involved</h2>
           <p> All of our projects are open source and we encourage everyone to contribute to them on our <a href="https://github.com/hooman96"> Github </a> page. If you don't code, we would still appreciate your help in any other area <a herf="about.html"> Reach out by Email</a>.</p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
