--- a/about.html
+++ b/about.html
@@ -181,7 +181,7 @@
           <p class="lead"> Mho Inc. is founded by <a href="https://hooman96.github.io"> Hooman Mohammadi</a> </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block" data-src="image/h.jpg" >
         </div>
       </div>
 
