link and images

--- a/about.html
+++ b/about.html
@@ -181,7 +181,9 @@
           <p class="lead"> Mho Inc. is founded by <a href="https://hooman96.github.io"> Hooman Mohammadi</a> </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="image/h.jpg" >
+          <a href="https://www.hooman96.github.io/">
+            <img class="featurette-image img-responsive center-block" src="image/h.jpg">
+          </a>
         </div>
       </div>
 
@@ -193,7 +195,9 @@
           <p class="lead">Anyone can involve and make this world a better place. </p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <a href="https://hoomanmo.wordpress.com/contact/">
+            <img class="featurette-image img-responsive center-block" src="image/download.png" >
+          </a>
         </div>
       </div>
 
@@ -205,7 +209,9 @@
           <p class="lead"> Mho Inc. started with thousand dollar fund raising by generous donations and support. Sign up </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <a href="http://www.pelpins.com/">
+            <img class="featurette-image img-responsive center-block" src="image/1.jpg">
+          </a>
         </div>
       </div>
 
