link issue on contact page

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                   <li class="button"><a href="index.html">Home</a></li>
                   <li><a href="about.html" class="button">About Us</a></li>
                   <li><a href="active">Contact</a></li>
-                  <li class="button"><a href="#">Projects</a></li>
+                  <li class="button"><a href="http://github.com/hooman96">Projects</a></li> 
                 </ul>
               </nav>
             </div>
