--- a/contact.html
+++ b/contact.html
@@ -44,9 +44,9 @@
               <h3 class="masthead-brand">Mho Inc.</h3>
               <nav>
                 <ul class="nav masthead-nav" class="actions">
-                  <li class="button"><a href="index.html">Home</a></li>
+                  <li><a href="index.html" class="button">Home</a></li>
                   <li><a href="about.html" class="button">About Us</a></li>
-                  <li><a href="active">Contact</a></li>
+                  <li class="active"><a href="#">Contact</a></li>
                   <li class="button"><a href="http://github.com/hooman96">Projects</a></li> 
                 </ul>
               </nav>
